# Synonyms_and_Antonyms

./: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
api/: words.py
core/: config.py
schemas/: words_schemas.py
services/: ai_service.py
